website/versioned_docs/version-0.19.0/reference/generated/rtk/README.md
## Interfaces

- [BaseUrls](interfaces/BaseUrls.md)
- [BetterAuthClientConfig](interfaces/BetterAuthClientConfig.md)
- [BetterAuthClientInterface](interfaces/BetterAuthClientInterface.md)
- [BetterAuthSession](interfaces/BetterAuthSession.md)
- [BetterAuthSessionData](interfaces/BetterAuthSessionData.md)
- [BetterAuthState](interfaces/BetterAuthState.md)
- [BetterAuthUser](interfaces/BetterAuthUser.md)
- [ConflictRecord](interfaces/ConflictRecord.md)
- [EmailSignupRequest](interfaces/EmailSignupRequest.md)
- [ExpoConstantsShape](interfaces/ExpoConstantsShape.md)
- [GenerateBetterAuthSliceConfig](interfaces/GenerateBetterAuthSliceConfig.md)
- [GoogleLoginRequest](interfaces/GoogleLoginRequest.md)
- [ListResponse](interfaces/ListResponse.md)
- [OfflineMiddlewareConfig](interfaces/OfflineMiddlewareConfig.md)
- [OfflineState](interfaces/OfflineState.md)
- [OfflineStatus](interfaces/OfflineStatus.md)
- [QueuedMutation](interfaces/QueuedMutation.md)
- [RealtimeEvent](interfaces/RealtimeEvent.md)
- [ResetPasswordRequest](interfaces/ResetPasswordRequest.md)
- [ServerStatusOptions](interfaces/ServerStatusOptions.md)
- [SocketConnection](interfaces/SocketConnection.md)
- [StorageAdapter](interfaces/StorageAdapter.md)
- [UseFeatureFlagsOptions](interfaces/UseFeatureFlagsOptions.md)
- [UserResponse](interfaces/UserResponse.md)
- [UseSocketConnectionOptions](interfaces/UseSocketConnectionOptions.md)
- [VersionCheckResponse](interfaces/VersionCheckResponse.md)

## Type Aliases

- [BetterAuthClient](type-aliases/BetterAuthClient.md)
- [BetterAuthOAuthProvider](type-aliases/BetterAuthOAuthProvider.md)
- [BetterAuthSlice](type-aliases/BetterAuthSlice.md)
- [EmailLoginRequest](type-aliases/EmailLoginRequest.md)
- [RootState](type-aliases/RootState.md)
- [ServerStatus](type-aliases/ServerStatus.md)

## Variables

- [addConflict](variables/addConflict.md)
- [AUTH\_DEBUG](variables/AUTH_DEBUG.md)
- [baseTasksUrl](variables/baseTasksUrl.md)
- [baseUrl](variables/baseUrl.md)
- [baseWebsocketsUrl](variables/baseWebsocketsUrl.md)
- [clearConflicts](variables/clearConflicts.md)
- [clearQueue](variables/clearQueue.md)
- [dequeue](variables/dequeue.md)
- [dismissConflict](variables/dismissConflict.md)
- [emptySplitApi](variables/emptySplitApi.md)
- [enqueue](variables/enqueue.md)
- [IsWeb](variables/IsWeb.md)
- [LOGOUT\_ACTION\_TYPE](variables/LOGOUT_ACTION_TYPE.md)
- [offlineReducer](variables/offlineReducer.md)
- [offlineSlice](variables/offlineSlice.md)
- [SAME\_ORIGIN\_SENTINEL](variables/SAME_ORIGIN_SENTINEL.md)
- [selectUndismissedConflicts](variables/selectUndismissedConflicts.md)
- [setOnlineStatus](variables/setOnlineStatus.md)
- [setSyncing](variables/setSyncing.md)
- [staggeredBaseQuery](variables/staggeredBaseQuery.md)
- [TOKEN\_REFRESHED\_SUCCESS](variables/TOKEN_REFRESHED_SUCCESS.md)
- [useGetVersionCheckQuery](variables/useGetVersionCheckQuery.md)
- [useLazyGetVersionCheckQuery](variables/useLazyGetVersionCheckQuery.md)

## Functions

- [buildOptimisticCreateItem](functions/buildOptimisticCreateItem.md)
- [configureOfflineMutationEndpoints](functions/configureOfflineMutationEndpoints.md)
- [createBetterAuthClient](functions/createBetterAuthClient.md)
- [createOfflineMiddleware](functions/createOfflineMiddleware.md)
- [createSessionApi](functions/createSessionApi.md)
- [createStorageAdapter](functions/createStorageAdapter.md)
- [generateAuthSlice](functions/generateAuthSlice.md)
- [generateBetterAuthSlice](functions/generateBetterAuthSlice.md)
- [generateProfileEndpoints](functions/generateProfileEndpoints.md)
- [generateTags](functions/generateTags.md)
- [getAuthToken](functions/getAuthToken.md)
- [getBaseQuery](functions/getBaseQuery.md)
- [getFriendlyExpirationInfo](functions/getFriendlyExpirationInfo.md)
- [getRealtimeSocket](functions/getRealtimeSocket.md)
- [getTokenExpirationTimes](functions/getTokenExpirationTimes.md)
- [isNetworkFetchError](functions/isNetworkFetchError.md)
- [isWebsocketsDebugEnabled](functions/isWebsocketsDebugEnabled.md)
- [logAuth](functions/logAuth.md)
- [logSocket](functions/logSocket.md)
- [populateId](functions/populateId.md)
- [realtimeDocument](functions/realtimeDocument.md)
- [realtimeList](functions/realtimeList.md)
- [refreshAuthToken](functions/refreshAuthToken.md)
- [resolveBaseUrls](functions/resolveBaseUrls.md)
- [resolveFeatureFlagsOptions](functions/resolveFeatureFlagsOptions.md)
- [selectBetterAuthError](functions/selectBetterAuthError.md)
- [selectBetterAuthIsAuthenticated](functions/selectBetterAuthIsAuthenticated.md)
- [selectBetterAuthIsLoading](functions/selectBetterAuthIsLoading.md)
- [selectBetterAuthState](functions/selectBetterAuthState.md)
- [selectBetterAuthUser](functions/selectBetterAuthUser.md)
- [selectBetterAuthUserId](functions/selectBetterAuthUserId.md)
- [selectConflicts](functions/selectConflicts.md)
- [selectCurrentUserId](functions/selectCurrentUserId.md)
- [selectIsAuthenticating](functions/selectIsAuthenticating.md)
- [selectIsOnline](functions/selectIsOnline.md)
- [selectIsOnlineSafe](functions/selectIsOnlineSafe.md)
- [selectIsSyncing](functions/selectIsSyncing.md)
- [selectLastTokenRefreshTimestamp](functions/selectLastTokenRefreshTimestamp.md)
- [selectOfflineQueue](functions/selectOfflineQueue.md)
- [selectQueueLength](functions/selectQueueLength.md)
- [setRealtimeDebug](functions/setRealtimeDebug.md)
- [setRealtimeSocket](functions/setRealtimeSocket.md)
- [shouldDeferOfflineMutation](functions/shouldDeferOfflineMutation.md)
- [shouldReplayQueuedMutation](functions/shouldReplayQueuedMutation.md)
- [shouldShowStillThereModal](functions/shouldShowStillThereModal.md)
- [useFeatureFlags](functions/useFeatureFlags.md)
- [useOfflineStatus](functions/useOfflineStatus.md)
- [useRealtimeDebug](functions/useRealtimeDebug.md)
- [useSelectCurrentUserId](functions/useSelectCurrentUserId.md)
- [useSelectIsAuthenticating](functions/useSelectIsAuthenticating.md)
- [useServerStatus](functions/useServerStatus.md)
- [useSocketConnection](functions/useSocketConnection.md)
- [useSyncConnection](functions/useSyncConnection.md)
- [useUpgradeCheck](functions/useUpgradeCheck.md)
